--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/Maps/Untitled.Untitled
 GlobalDefaultGameMode=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+EditorStartupMap=/Game/Maps/Untitled.Untitled
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
