--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=-1468,Y=85)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,6 +100,7 @@ LastExecutedLaunchName=DESKTOP-TV1VD74
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=-1468,Y=85)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -130,6 +131,7 @@ LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=491.000 Y=84.000
@@ -161,7 +163,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Main/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Main/Tests/test_anim
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -171,9 +173,37 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSizeScale=0.100000
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=FrameRate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=NumFrames
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=RetargetSourceAsset
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
-UNR=D:/Sigachev_Diplom/Sigachev_Diplom/Content/
+UNR=D:/Sigachev_Diplom/Sigachev_Diplom/Sigachev_Diplom/Content/Maps
 BRUSH=D:/Sigachev_Diplom/Sigachev_Diplom/Content/
 FBX=D:/Sigachev_Diplom/Sigachev_Diplom/Content/
 FBXAnim=D:/Sigachev_Diplom/Sigachev_Diplom/Content/
@@ -1065,6 +1095,16 @@ MovieSceneCapture.TimeStamp=2021.12.08-20.48.42
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2021.12.08-20.48.35
 BlueprintGraph.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2021.12.08-20.48.33
+AnimationEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2021.12.08-20.48.46
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2021.12.08-20.48.43
+PinnedCommandList.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.12.08-20.48.46
+SequencerWidgets.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.12.08-20.48.39
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Block,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Attack,
@@ -1414,14 +1454,102 @@ ThirdPersonCharacter_C.Actor=True
 ThirdPersonCharacter_C.Input=True
 K2Node_InputAction.Input=True
 K2Node_InputAxisEvent.Input=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
+AnimMontage.Animation=True
+AnimMontage.BlendOption=True
+AnimMontage.SyncGroup=True
+AnimMontage.AdditiveSettings=True
+AnimMontage.TimeStretchCurve=True
+AnimMontage.MetaData=True
+AnimMontage.Thumbnail=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_CallFunction.Graph=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_VariableSet.Events=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
 GameMapsSettings=True
 InputSettings=True
+GeneralProjectSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/Main/Tests/HUD
+MRUItem1=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Main/Tests/test_anim/test1
+MRUItem3=/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4
+MRUItem4=/Game/Main/Tests/test_anim/TwoHandSwordCombo4UE4
+MRUItem5=/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4
+MRUItem6=/Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4
+MRUItem7=/Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4
+MRUItem8=/Game/Main/Tests/test_anim/SwordAndShieldBlock4UE4
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1462,4 +1590,153 @@ NodeTemplateCacheCapMB=20.000000
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
 Object=
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
+AnimMontage="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
+AnimCompositeBase="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
+AnimSequenceBase="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
+AnimationAsset="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
+
+[MRU]
+MRUItem0=/Game/Maps/Untitled
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
+
+[AssetEditorToolkitTabLocation]
+/Game/Main/Tests/test_anim/SwordAndShieldBlock4UE4.SwordAndShieldBlock4UE4=1
+/Game/Main/Tests/test_anim/TwoHandSwordCombo4UE4.TwoHandSwordCombo4UE4=1
+/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4.SwordAndShieldBlockIdle4UE4=1
+/Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4.GreatSwordJumpAttack4UE4=1
+/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4.GreatSwordHighSpinAttack4UE4=1
+/Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4.SwordAndShieldAttack_1_4UE4=1
+/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/Main/Tests/test_anim/test1.test1=0
+/Game/Main/Tests/HUD.HUD=0
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
+
+[MessageLog]
+LastLogListing=PIE
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
