--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1468,Y=85)
+NewWindowPosition=(X=374,Y=75)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,7 +100,7 @@ LastExecutedLaunchName=DESKTOP-TV1VD74
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=-1468,Y=85)
+MultipleInstancePositions=(X=374,Y=75)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -133,11 +133,10 @@ LastLevel=/Game/Maps/Untitled
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
-OpenAssetsAtExit=/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4.GreatSwordHighSpinAttack4UE4
+OpenAssetsAtExit=/Game/Main/Tests/HUD.HUD
 
 [RootWindow]
-ScreenPosition=X=491.000 Y=84.000
+ScreenPosition=X=254.000 Y=66.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -166,7 +165,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Main/Tests/test_anim
+ContentBrowserTab1.SelectedPaths=/Game/Main/Tests
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1190,6 +1189,12 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Block,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Attack,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Block,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Attack,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Block,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Attack,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
+ThirdPersonCharacter_C=
+CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.None,
+HUD_C=
+Character=K2Node_VariableGet.DefaultValueCategory.None,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1652,6 +1657,23 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+PropertyWrapper.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1660,16 +1682,16 @@ InputSettings=True
 GeneralProjectSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4
-MRUItem1=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem2=/Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4
-MRUItem3=/Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4
-MRUItem4=/Game/Main/Tests/Sword/16th_Century_Dark_Sword
-MRUItem5=/Game/Main/Tests/Sword/16th_Century_Dark_Sword/Fbx/16th_Century_Dark_Sword
-MRUItem6=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem7=/Game/Main/Tests/SwordAndShieldBlockIdle4UE4
-MRUItem8=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem9=/Game/Main/Tests/HUD
+MRUItem0=/Game/Main/Tests/HUD
+MRUItem1=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4
+MRUItem3=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem4=/Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4
+MRUItem5=/Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4
+MRUItem6=/Game/Main/Tests/Sword/16th_Century_Dark_Sword
+MRUItem7=/Game/Main/Tests/Sword/16th_Century_Dark_Sword/Fbx/16th_Century_Dark_Sword
+MRUItem8=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem9=/Game/Main/Tests/SwordAndShieldBlockIdle4UE4
 MRUItem10=/Game/Main/Tests/test_anim/test1
 MRUItem11=/Game/Main/Tests/test_anim/TwoHandSwordCombo4UE4
 MRUItem12=/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4
@@ -1713,7 +1735,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
-Object="\"Object.SkeletalMeshes\" "
+Object="\"Object.JumpZVelocity\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 AnimMontage="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
@@ -1723,8 +1745,16 @@ AnimationAsset=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" "
 AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" "
-K2Node="\"Object.Settings.Node.LayerSetup\" "
-EdGraphNode="\"Object.Settings.Node.LayerSetup\" "
+K2Node=
+EdGraphNode=
+CharacterMovementComponent="\"Object.JumpZVelocity\" "
+PawnMovementComponent="\"Object.JumpZVelocity\" "
+NavMovementComponent="\"Object.JumpZVelocity\" "
+MovementComponent="\"Object.JumpZVelocity\" "
+ActorComponent="\"Object.JumpZVelocity\" "
+ThirdPersonCharacter_C="\"Object.CharacterMovement\" "
+Character="\"Object.CharacterMovement\" "
+Pawn="\"Object.CharacterMovement\" "
 
 [MRU]
 MRUItem0=/Game/Maps/Untitled
