--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=374,Y=75)
+NewWindowPosition=(X=-1416,Y=64)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,7 +100,7 @@ LastExecutedLaunchName=DESKTOP-TV1VD74
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=374,Y=75)
+MultipleInstancePositions=(X=-1416,Y=64)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -133,10 +133,11 @@ LastLevel=/Game/Maps/Untitled
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Main/Tests/HUD.HUD
+OpenAssetsAtExit=/Game/Main/Tests/test_anim/Jumping4UE4.Jumping4UE4
+OpenAssetsAtExit=/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
 
 [RootWindow]
-ScreenPosition=X=254.000 Y=66.000
+ScreenPosition=X=349.000 Y=60.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -165,7 +166,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Main/Tests
+ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Animations
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1190,11 +1191,13 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Block,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Attack,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Block,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Attack,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,
-ThirdPersonCharacter_C=
+ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.None,
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.None,
 HUD_C=
 Character=K2Node_VariableGet.DefaultValueCategory.None,
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,
+ThirdPerson_AnimBP_C=
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1674,6 +1677,16 @@ CanvasPanel.Navigation=True
 CanvasPanel.Localization=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+FbxImportUI.Mesh=True
+FbxImportUI.Animation=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.FbxFileInformation=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_TransitionResult.Result=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1682,20 +1695,23 @@ InputSettings=True
 GeneralProjectSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Main/Tests/HUD
-MRUItem1=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4
-MRUItem3=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem4=/Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4
-MRUItem5=/Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4
-MRUItem6=/Game/Main/Tests/Sword/16th_Century_Dark_Sword
-MRUItem7=/Game/Main/Tests/Sword/16th_Century_Dark_Sword/Fbx/16th_Century_Dark_Sword
-MRUItem8=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem9=/Game/Main/Tests/SwordAndShieldBlockIdle4UE4
-MRUItem10=/Game/Main/Tests/test_anim/test1
-MRUItem11=/Game/Main/Tests/test_anim/TwoHandSwordCombo4UE4
-MRUItem12=/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4
-MRUItem13=/Game/Main/Tests/test_anim/SwordAndShieldBlock4UE4
+MRUItem0=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem1=/Game/Main/Tests/test_anim/Jumping4UE4
+MRUItem2=/Game/Mannequin/Animations/Prepare_To_Jump_Montage
+MRUItem3=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/Mannequin/Animations/Prepare_To_Jump
+MRUItem5=/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4
+MRUItem6=/Game/Main/Tests/SwordAndShieldBlockIdle4UE4
+MRUItem7=/Game/Main/Tests/HUD
+MRUItem8=/Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4
+MRUItem9=/Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4
+MRUItem10=/Game/Main/Tests/Sword/16th_Century_Dark_Sword
+MRUItem11=/Game/Main/Tests/Sword/16th_Century_Dark_Sword/Fbx/16th_Century_Dark_Sword
+MRUItem12=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem13=/Game/Main/Tests/test_anim/test1
+MRUItem14=/Game/Main/Tests/test_anim/TwoHandSwordCombo4UE4
+MRUItem15=/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4
+MRUItem16=/Game/Main/Tests/test_anim/SwordAndShieldBlock4UE4
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1735,7 +1751,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
-Object="\"Object.JumpZVelocity\" "
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 AnimMontage="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
@@ -1744,17 +1760,19 @@ AnimSequenceBase=
 AnimationAsset=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" "
-AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" "
+AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
 CharacterMovementComponent="\"Object.JumpZVelocity\" "
 PawnMovementComponent="\"Object.JumpZVelocity\" "
 NavMovementComponent="\"Object.JumpZVelocity\" "
 MovementComponent="\"Object.JumpZVelocity\" "
-ActorComponent="\"Object.JumpZVelocity\" "
-ThirdPersonCharacter_C="\"Object.CharacterMovement\" "
-Character="\"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterMovement\" "
+ActorComponent=
+ThirdPersonCharacter_C="\"Object.ChargingJump?\" "
+Character="\"Object.ChargingJump?\" "
+Pawn="\"Object.ChargingJump?\" "
+ThirdPerson_AnimBP_C="\"Object.Chardge?\" "
+AnimInstance="\"Object.Chardge?\" "
 
 [MRU]
 MRUItem0=/Game/Maps/Untitled
@@ -1785,7 +1803,7 @@ TimelineScrubSnapValue=1000
 TimelineDisplayFormat=Frames
 bTimelineDisplayPercentage=True
 bTimelineDisplayFormatSecondary=True
-bTimelineDisplayCurveKeys=False
+bTimelineDisplayCurveKeys=True
 TimelineEnabledSnaps=CompositeSegment
 TimelineEnabledSnaps=MontageSection
 
@@ -1807,6 +1825,7 @@ InstalledPlugins=XRVisualization
 /Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton.UE4_Mannequin_Skeleton=0
 /Game/Main/Tests/Sword/16th_Century_Dark_Sword/Fbx/16th_Century_Dark_Sword.16th_Century_Dark_Sword=0
 /Game/Main/Tests/Sword/16th_Century_Dark_Sword.16th_Century_Dark_Sword=0
+/Game/Mannequin/Animations/Prepare_To_Jump.Prepare_To_Jump=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1913,4 +1932,114 @@ PreserveScaleRatio=False
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=True
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
