--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Main/Maps/Untitled.Untitled
+GameDefaultMap=/Game/Main/Maps/mainmenulvl.mainmenulvl
 GlobalDefaultGameMode=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
-EditorStartupMap=/Game/Main/Maps/Untitled.Untitled
+EditorStartupMap=/Game/Main/Maps/mainmenulvl.mainmenulvl
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
