--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,3 +30,6 @@ r.Shadow.Virtual.Enable=1
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Sigachev_Diplom_UE5")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Sigachev_Diplom_UE5")
 
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
+
