--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,3 +33,17 @@ r.Shadow.Virtual.Enable=1
 [/Script/UnrealEd.CookerSettings]
 bCookOnTheFlyForLaunchOn=True
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=91C4606B46B89518DEE4D3BE11D0AED7
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
