--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,9 @@
 * text=auto
 *.psd filter=lfs diff=lfs merge=lfs -text
 Content/DungeonLamps filter=lfs diff=lfs merge=lfs -text
+Content/DungeonLamps/Textures/T_DungeonLamps_001_cc.uasset filter=lfs diff=lfs merge=lfs -text
+Content/DungeonLamps/Textures/T_DungeonLamps_001_nm.uasset filter=lfs diff=lfs merge=lfs -text
+Content/DungeonLamps/Textures/T_DungeonLamps_002_aorame.uasset filter=lfs diff=lfs merge=lfs -text
+Content/DungeonLamps/Textures/T_DungeonLamps_002_cc.uasset filter=lfs diff=lfs merge=lfs -text
+Content/DungeonLamps/Textures/T_DungeonLamps_002_nm.uasset filter=lfs diff=lfs merge=lfs -text
+Content/DungeonLamps/Textures/T_DungeonLamps_001_aorame.uasset filter=lfs diff=lfs merge=lfs -text
