--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=Sigachev_Diplom_UE5
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Main/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-GameDefaultMap=/Game/Main/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+GameDefaultMap=/Game/Main/Maps/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
